@@ -1,3 +1,7 @@
+2002-01-27  Jason R. Mastaler  <jason@mastaler.com>
+
+	* config-filter.ht: Merge in Tim Legant's documentation.
+	
 2002-01-26  Jason R. Mastaler  <jason@mastaler.com>
 
 	* download.ht (Links): Mention that the tarball can be used to
